--- a/certs.yaml
+++ b/certs.yaml
@@ -2892,3 +2892,8 @@ sithempireorg:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+iradwiki:
+  url: 'irad.wiki'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
