--- a/certs.yaml
+++ b/certs.yaml
@@ -2913,3 +2913,13 @@ wikilapisnettop:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+wwwkernowwikicom:
+  url: 'www.kernowwiki.com'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
+wikitruevanillaorg:
+  url: 'wiki.truevanilla.org'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
