--- a/certs.yaml
+++ b/certs.yaml
@@ -2933,3 +2933,8 @@ kippuwikiedapedianet:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+backroomszhwiki:
+  url: 'backroomszh.wiki'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
