--- a/redirects.yaml
+++ b/redirects.yaml
@@ -510,6 +510,13 @@ elaruuwiki:
   ca: 'CloudFlare'
   hsts: 'strict'
   disable_event: true
+animalroyalewiki:
+  url: 'animaleroyale.miraheze.org'
+  redirect: 'wiki.animaleroyale.com'
+  sslname: 'miraheze-origin-cert'
+  ca: 'CloudFlare'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
