--- a/redirects.yaml
+++ b/redirects.yaml
@@ -83,7 +83,7 @@ wwwmh142com:
   disable_event: true
 statusredirect:
   url: 'status.miraheze.org'
-  redirect: 'mirahezestatus.net'
+  redirect: 'status.wikitide.net'
   sslname: 'miraheze-origin-cert'
   ca: 'Cloudflare'
   hsts: 'strict'
