--- a/certs.yaml
+++ b/certs.yaml
@@ -2939,3 +2939,8 @@ pbmaciejcreatescom:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+wikiamazoniahackco:
+  url: 'wiki.amazoniahack.co'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
