--- a/redirects.yaml
+++ b/redirects.yaml
@@ -588,6 +588,13 @@ bordrrevivedwiki:
   ca: 'Cloudflare'
   hsts: 'strict'
   disable_event: true
+antonballwiki:
+  url: 'antonball.miraheze.org'
+  redirect: 'summitpedia.miraheze.org'
+  sslname: 'miraheze-origin-cert'
+  ca: 'Cloudflare'
+  hsts: 'strict'
+  disable_event: true
 
 
 # orain.org to miraheze.org wiki redirects
