--- a/certs.yaml
+++ b/certs.yaml
@@ -2959,3 +2959,8 @@ wikiourbluemarblenet:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+wwwbackroomszhwiki:
+  url: 'www.backroomszh.wiki'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
