--- a/certs.yaml
+++ b/certs.yaml
@@ -2959,3 +2959,8 @@ wwwbackroomszhwiki:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+zhwikianimalroyalecom:
+  url: 'zh.wiki.animalroyale.com'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
