--- a/certs.yaml
+++ b/certs.yaml
@@ -3000,3 +3000,8 @@ wikijsalorg:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+svewikicom:
+  url: 'svewiki.com'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
